# crewai-tutorial

./: .gitignore
hello_world/: main.py
test_flow/: README.md  groq_pr_report.md  poem.txt  pyproject.toml
test_flow/src/test_flow/: main.py
test_flow/src/test_flow/crews/poem_crew/: poem_crew.py  pr_crew.py
test_flow/src/test_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
tutorial_project/: README.md  pyproject.toml  report.md  training_data.pkl
tutorial_project/knowledge/: user_preference.txt
tutorial_project/src/tutorial_project/: crew.py  main.py
